Fri Mar 11 10:30:46 CET 2005 Daniel Veillard <veillard@redhat.com>

	* README doc/gamin.html doc/overview.html: typo fix in the
	  documentation by Jean-Marc Coursimault

Mon Mar  7 11:16:10 CET 2005 Daniel Veillard <veillard@redhat.com>

	* libgamin/fam.h: gcc4 now breaks with #include "limits.h" from
	  FAM include, fixing #150169.

Tue Mar  1 18:53:58 CET 2005 Daniel Veillard <veillard@redhat.com>

	* NEWS configure.in gamin.spec.in doc/gamin.html doc/news.html:
	  prepared release of 0.0.25

Tue Mar  1 18:17:06 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: fixed a problem with monitoring directories
	  without using the kernel
	* python/tests/Makefile.am python/tests/nokernel.py: adding a specific
	  regression test

Tue Mar  1 16:42:41 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: found out the bug blocking unmounting 
	  of temporary media filesystems in 0.0.24, it wasn't dnotify.

Wed Feb 23 23:28:18 CET 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in: small patch about debugging being always enabled
	  by Martin Schlemmer

Wed Feb 23 17:44:54 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: try to avoid the /media/ mount problem
	  in 0.0.24

Fri Feb 18 15:25:23 CET 2005 Daniel Veillard <veillard@redhat.com>

	* NEWS configure.in gamin.spec.in doc/gamin.html doc/news.html:
	  updated and preparing release of 0.0.24

Fri Feb 18 14:36:38 CET 2005 Daniel Veillard <veillard@redhat.com>

	* python/tests/Makefile.am python/tests/dnotify[67].py: added
	  more complex dnotify tests

Fri Feb 18 12:59:16 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: more cleanup, bug fix on monitoring
	  missing files.
	* python/tests/Makefile.am python/tests/dnotify5.py: added
	  a specific test.
	  
Thu Feb 17 17:15:31 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c server/gam_poll.c: removing bugs,
	  did I say that I hate DNotify ?