@@ -249,21 +249,22 @@ processCommand(char *line, int no)
             return (-1);
         }
         testState.connected = 1;
-	if (arg != NULL)
-	    printf("connected to %s\n", arg);
-	else
-	    printf("connected\n");
+        if (arg != NULL)
+            printf("connected to %s\n", arg);
+        else
+            printf("connected\n");
     } else if (!strcmp(command, "kill")) {
         /*
-	 * okay, it's heavy but that's the simplest way since we do not have
-	 * the pid(s) of the servers running.
-	 */
+         * okay, it's heavy but that's the simplest way since we do not have
+         * the pid(s) of the servers running.
+         */
         ret = system("killall gam_server");
         if (ret < 0) {
-            fprintf(stderr, "kill line %d: failed to killall gam_server\n", no);
+            fprintf(stderr, "kill line %d: failed to killall gam_server\n",
+                    no);
             return (-1);
         }
-	printf("killall gam_server\n");
+        printf("killall gam_server\n");
     } else if (!strcmp(command, "disconnect")) {
         if (testState.connected == 0) {
             fprintf(stderr, "disconnect line %d: not connected\n", no);
@@ -277,31 +278,32 @@ processCommand(char *line, int no)
         testState.connected = 0;
         printf("disconnected\n");
     } else if (!strcmp(command, "mondir")) {
-	if (args >= 2) {
-	    if (arg[0] != '/')
-		snprintf(filename, sizeof(filename), "%s/%s", pwd, arg);
-	    else
-		snprintf(filename, sizeof(filename), "%s", arg);
-	}
+        if (args >= 2) {
+            if (arg[0] != '/')
+                snprintf(filename, sizeof(filename), "%s/%s", pwd, arg);
+            else
+                snprintf(filename, sizeof(filename), "%s", arg);
+        }
         if (args == 2) {
-	    ret = FAMMonitorDirectory(&(testState.fc), filename,
-				      &(testState.fr[testState.nb_requests]),
-				      NULL);
+            ret = FAMMonitorDirectory(&(testState.fc), filename,
+                                      &(testState.
+                                        fr[testState.nb_requests]), NULL);
         } else if (args == 3) {
-	    int index;
+            int index;
 
             if (sscanf(arg2, "%d", &index) <= 0) {
-		fprintf(stderr, "mondir line %d: invalid index value %s\n",
-		        no, arg2);
-		return (-1);
-	    }
-	    testState.fr[testState.nb_requests].reqnum = index;
-	    ret = FAMMonitorDirectory2(&(testState.fc), filename,
-				      &(testState.fr[testState.nb_requests]));
-	} else {
+                fprintf(stderr, "mondir line %d: invalid index value %s\n",
+                        no, arg2);
+                return (-1);
+            }
+            testState.fr[testState.nb_requests].reqnum = index;
+            ret = FAMMonitorDirectory2(&(testState.fc), filename,
+                                       &(testState.
+                                         fr[testState.nb_requests]));
+        } else {
             fprintf(stderr, "mondir line %d: invalid format\n", no);
             return (-1);
-	}
+        }
         if (ret < 0) {
             fprintf(stderr, "mondir line %d: failed to monitor %s\n", no,
                     arg);
@@ -314,10 +316,10 @@ processCommand(char *line, int no)
             fprintf(stderr, "mkdir line %d: lacks name\n", no);
             return (-1);
         }
-	if (arg[0] != '/')
-	    snprintf(filename, sizeof(filename), "%s/%s", pwd, arg);
-	else
-	    snprintf(filename, sizeof(filename), "%s", arg);
+        if (arg[0] != '/')
+            snprintf(filename, sizeof(filename), "%s/%s", pwd, arg);
+        else
+            snprintf(filename, sizeof(filename), "%s", arg);
         ret = FAMMonitorFile(&(testState.fc), filename,
                              &(testState.fr[testState.nb_requests]), NULL);
         if (ret < 0) {
@@ -407,33 +409,34 @@ processCommand(char *line, int no)
     } else if (!strcmp(command, "events")) {
         printEvents(no);
     } else if (!strcmp(command, "expect")) {
-	int count;
-	int delay = 0;
-	int nb_events = testState.nb_events;
+        int count;
+        int delay = 0;
+        int nb_events = testState.nb_events;
 
         if (args != 2) {
             fprintf(stderr, "expect line %d: lacks number\n", no);
             return (-1);
         }
 
-	if (sscanf(arg, "%d", &count) <= 0) {
-	    fprintf(stderr, "expect line %d: invalid number value %s\n",
-		    no, arg);
-	    return (-1);
-	}
-	/*
-	 * wait at most 3 secs before declaring failure
-	 */
-	while ((delay < 30) && (testState.nb_events < nb_events + count)) {
-	    debugLoop(100);
+        if (sscanf(arg, "%d", &count) <= 0) {
+            fprintf(stderr, "expect line %d: invalid number value %s\n",
+                    no, arg);
+            return (-1);
+        }
+        /*
+         * wait at most 3 secs before declaring failure
+         */
+        while ((delay < 30) && (testState.nb_events < nb_events + count)) {
+            debugLoop(100);
+
 /*	    printf("+"); fflush(stdout); */
-	    delay++;
-	}
-	if (testState.nb_events < nb_events + count) {
-	    printf("expect line %d: got %d of %d expected events\n",
-		   no, testState.nb_events - nb_events, count);
-	    return(-1);
-	}
+            delay++;
+        }
+        if (testState.nb_events < nb_events + count) {
+            printf("expect line %d: got %d of %d expected events\n",
+                   no, testState.nb_events - nb_events, count);
+            return (-1);
+        }
     } else if (!strcmp(command, "sleep")) {
         int i;
 
@@ -441,13 +444,37 @@ processCommand(char *line, int no)
             usleep(50000);
     } else if (!strcmp(command, "wait")) {
         sleep(1);
+    } else if (!strcmp(command, "cancel")) {
+        if (args == 2) {
+            int req_index = 0;
+
+            if (sscanf(arg, "%d", &req_index) <= 0
+                || req_index >= testState.nb_requests) {
+                fprintf(stderr,
+                        "cancel line %d: invalid req_index value %s\n", no,
+                        arg);
+                return (-1);
+            }
+            ret = FAMCancelMonitor(&(testState.fc),
+                                   &(testState.fr[req_index]));
+
+        } else {
+            fprintf(stderr, "cancel line %d: invalid format\n", no);
+            return (-1);
+        }
+        if (ret < 0) {
+            fprintf(stderr,
+                    "cancel line %d: failed to cancel req_index %s\n", no,
+                    arg);
+            return (-1);
+        }
+        printf("cancel %s %d\n", arg, testState.nb_requests);
     } else {
         fprintf(stderr, "Unable to parse line %d: %s\n", no, line);
         return (-1);
     }
     return (0);
 }
-
 static int
 playTest(const char *filename)
 {
