@@ -1,3 +1,10 @@
+Tue Mar 15 12:24:06 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* server/gam_poll.c: fixed the crash on failed tree assert bug #150471
+	  based on the patch from Dean Brettle
+	* tests/testing.c tests/result/10 tests/scenario/10.tst: integrated the
+	  regression test provided by Dean Brettle
+
 Fri Mar 11 10:30:46 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* README doc/gamin.html doc/overview.html: typo fix in the
